--- a/NongSanShop/Views/Admin/Index.cshtml
+++ b/NongSanShop/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 <div id="content">
     <div class="container-fluid">
         <div class="d-sm-flex justify-content-between align-items-center mb-4">
-            <h3 class="text-dark mb-0">Tổng quan</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate Report</a>
+            <h3 class="text-dark mb-0">Tổng quan</h3>
         </div>
         <div class="row">
             <div class="col-md-6 col-xl-3 mb-4">
