--- a/NongSanShop/Views/Blog/Create.cshtml
+++ b/NongSanShop/Views/Blog/Create.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label class="control-label col-md-2">Nội dung</label>
                 <div class="col-md-10">
-                    <textarea id="summernote" name="editordata"></textarea>
+                    @Html.TextAreaFor(model => model.content, new { @class = "form-control", @cols = 80, @rows = 10 })
                     @Html.ValidationMessageFor(model => model.content, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -71,58 +71,4 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <!--include summernote css/js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-lite.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-lite.js"></script>
-
-
-    <script>
-        $(document).ready(function () {
-            $('#summernote').summernote({
-                placeholder: 'Enter content....',
-                tabsize: 2,
-                height: 200,
-                minHeight: 100,
-                maxHeight: 300,
-                focus: true,
-                toolbar: [
-                    ['style', ['bold', 'italic', 'underline', 'clear']],
-                    ['font', ['strikethrough', 'superscript', 'subscript']],
-                    ['fontsize', ['fontsize']],
-                    ['color', ['color']],
-                    ['para', ['ul', 'ol', 'paragraph']],
-                    ['height', ['height']],
-                    ['table', ['table']],
-                    ['insert', ['link', 'picture', 'video']],
-                    ['view', ['fullscreen', 'codeview', 'help']],
-                ],
-                popover: {
-                    image: [
-                        ['image', ['resizeFull', 'resizeHalf', 'resizeQuarter', 'resizeNone']],
-                        ['float', ['floatLeft', 'floatRight', 'floatNone']],
-                        ['remove', ['removeMedia']]
-                    ],
-                    link: [
-                        ['link', ['linkDialogShow', 'unlink']]
-                    ],
-                    table: [
-                        ['add', ['addRowDown', 'addRowUp', 'addColLeft', 'addColRight']],
-                        ['delete', ['deleteRow', 'deleteCol', 'deleteTable']],
-                    ],
-                    air: [
-                        ['color', ['color']],
-                        ['font', ['bold', 'underline', 'clear']],
-                        ['para', ['ul', 'paragraph']],
-                        ['table', ['table']],
-                        ['insert', ['link', 'picture']]
-                    ]
-                },
-                codemirror: {
-                    theme: 'monokai'
-                }
-            });
-
-        });
-    </script>
 }
