--- a/NongSanShop/Views/Blog/Edit.cshtml
+++ b/NongSanShop/Views/Blog/Edit.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Nội dung</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.content, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.content, new { @class = "form-control", @cols = 80, @rows = 10 })
                 @Html.ValidationMessageFor(model => model.content, "", new { @class = "text-danger" })
             </div>
         </div>
