--- a/NongSanShop/Views/Order/Create.cshtml
+++ b/NongSanShop/Views/Order/Create.cshtml
@@ -47,6 +47,14 @@
             </div>
 
             <div class="form-group">
+                <label class="control-label col-md-2">Điện thoại</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label class="control-label col-md-2">Code đơn hàng</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.code_name, new { htmlAttributes = new { @class = "form-control" } })
