--- a/NongSanShop/Views/Order/Edit.cshtml
+++ b/NongSanShop/Views/Order/Edit.cshtml
@@ -49,6 +49,14 @@
             </div>
 
             <div class="form-group">
+                <label class="control-label col-md-2">Điện thoại</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label class="control-label col-md-2">Code đơn hàng</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.code_name, new { htmlAttributes = new { @class = "form-control" } })
@@ -59,8 +67,14 @@
             <div class="form-group">
                 <label class="control-label col-md-2">Trạng thái</label>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
+                    @Html.DropDownList("status",
+                        new List<SelectListItem>
+                        {
+                            new SelectListItem {Text = "Chưa thanh toán", Value = "1"},
+                            new SelectListItem {Text = "Đã thanh toán", Value = "2"}
+                        },
+                        "Đang chờ",
+                        new { @class = "form-control" })
                 </div>
             </div>
 
