--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -101,11 +101,6 @@
                                     </a>
                                     <div class="caption">
                                         <p>@item.description</p>
-                                        <p>
-                                            <a href="#" class="btn btn-default btn-transparent" role="button">
-                                                <span>Xem chi tiết</span>
-                                            </a>
-                                        </p>
                                     </div> <!-- End of /.caption -->
                                 </div> <!-- End of /.thumbnail -->
                             </div> <!-- End of /.col-sm-6 col-md-4 -->
@@ -124,7 +119,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="products-heading">
-                    <h2>SẢN PHẨM MỚI</h2>
+                    <h2 style="padding-top: 20px;">SẢN PHẨM MỚI</h2>
                 </div>
             </div>
         </div>
