--- a/NongSanShop/Views/Home/Store.cshtml
+++ b/NongSanShop/Views/Home/Store.cshtml
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="products-heading">
-                    <h2>SẢN PHẨM MỚI</h2>
+                    <h2 style=" padding-top: 20px;">SẢN PHẨM MỚI</h2>
                 </div>	<!-- End of /.Products-heading -->
                 <div class="product-grid">
                     <ul>
