--- a/NongSanShop/Views/Shared/_ClientLayout.cshtml
+++ b/NongSanShop/Views/Shared/_ClientLayout.cshtml
@@ -50,7 +50,7 @@
                     <div class="col-md-7">
                         <p class="contact-action"><i class="fa fa-phone-square"></i>LIÊN HỆ VỚI CHÚNG TÔI QUA HOTLINE: <strong>+84898709170</strong></p>
                     </div>
-                    <div class="col-md-3 clearfix">
+                    <div class="col-md-5 clearfix">
                         <ul class="login-cart">
                             <li>
                                 @if (Session[Constants.SessionItem.User] != null)
@@ -93,16 +93,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-2">
-                        <div class="search-box">
-                            <div class="input-group">
-                                <input placeholder="Tìm kiếm ngay" type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button"></button>
-                                </span>
-                            </div><!-- /.input-group -->
-                        </div><!-- /.search-box -->
-                    </div>
+                    
                 </div> <!-- End Of /.row -->
             </div>	<!-- End Of /.Container -->
             <!-- MODAL Start
@@ -170,7 +161,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="#">
+                        <a href="@Url.Action("Index","Home")">
                             <img src="~/wwwroot/images/logo.png" alt="logo">
                         </a>
                     </div>	<!-- End of /.col-md-12 -->
@@ -213,7 +204,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-7">
                         <div class="block clearfix">
                             <a href="#">
                                 <img src="~/wwwroot/images/footer-logo.png" alt="">
@@ -251,7 +242,7 @@
                             </ul>	<!-- End Of /.social-icon -->
                         </div>	<!-- End Of /.block -->
                     </div> <!-- End Of /.Col-md-4 -->
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="block">
                             <h4>LIÊN LẠC</h4>
                             <p><i class="fa  fa-map-marker"></i> <span>Nông Sản Sạch,</span>35 Xuân Phương, Nam Từ Liêm, Hà Nội</p>
@@ -260,31 +251,6 @@
                             <p> <i class="fa  fa-mobile"></i> <span>Mobile:</span> (+84) 0898709170 </p>
 
                             <p class="mail"><i class="fa  fa-envelope"></i><span>Email:</span>vuluu040320@gmail.com</p>
-                        </div>	<!-- End Of /.block -->
-                    </div> <!-- End Of Col-md-3 -->
-                    <div class="col-md-4">
-                        <div class="block">
-                            <h4>SẮP CÓ</h4>
-                            <div class="media">
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                                <a class="pull-left" href="#">
-                                    <img class="media-object" src="~/wwwroot/images/product-item.jpg" alt="...">
-                                </a>
-                            </div>	<!-- End Of /.media -->
                         </div>	<!-- End Of /.block -->
                     </div> <!-- End Of Col-md-3 -->
                 </div> <!-- End Of /.row -->
